Fix vertical alignment of goal inputs

--- a/rtg/src/components/GameCardBet.scss
+++ b/rtg/src/components/GameCardBet.scss
@@ -8,7 +8,7 @@
 
   &__goal-input-row {
     height: 32px;
-    padding: 0 2px 4px;
+    padding: 0 2px 3px;
     font-size: 18px;
 
     display: flex;
